--- a/src/content/technotes/TN0046-migrating-away-from-monolith.mdx
+++ b/src/content/technotes/TN0046-migrating-away-from-monolith.mdx
@@ -1,17 +1,19 @@
 ---
 title: Monolith to Federation - First steps
-id: TN0042
+id: TN0046
 description: Using the strangulation pattern to remove the monolith
 tags: [federation, transformation, organization]
- ---
+---
 
 ## Introduction
-The majority of organizations possess a Monolith they wish to transition away from, in favor of adopting  Federation. This endeavor often appears exceedingly complex and challenging to comprehend, let alone undertake. At Apollo, we have observed numerous patterns of migration from monolithic structures. In this technote, we will explore the most successful pattern, one that offers iterative and progressive feedback, enabling businesses to confidently invest in this transformative change.
+
+Many organizations have a monolith they want to move away from in favor of adopting a federated architecture. This endeavor often appears exceedingly complex and challenging to comprehend, let alone undertake. At Apollo, we have observed numerous patterns of migration from monolithic structures. In this technote, we will explore the most successful pattern, one that offers iterative and progressive feedback, enabling businesses to confidently invest in this transformative change.
 
 ## The digital transformation
-The pattern under consideration is the strangulation pattern. It involves logically dissecting the Monolith into segments and migrating the relevant portions incrementally. By adopting this approach, you can achieve your objective of transitioning away from the monolithic system while simultaneously demonstrating gradual progress to the business, as mentioned earlier.
-The initial and frequently most challenging question to address is: how should the Monolith be divided? The majority of companies, if not all, opt to separate their systems based on distinct domains. To illustrate this process, we will examine a typical e-commerce application and explore some of its associated domains.
 
+The pattern under consideration is the strangulation pattern. It involves logically dissecting the Monolith into segments and migrating the relevant portions incrementally. By adopting this approach, you can achieve your objective of transitioning away from the monolithic system while simultaneously demonstrating gradual progress to the business, as mentioned earlier.
+
+The initial and frequently most challenging question to address is: how should the Monolith be divided? The majority of companies, if not all, opt to separate their systems based on distinct domains. To illustrate this process, we will examine a typical e-commerce application and explore some of its associated domains.
 
 - Product
 - Inventory
@@ -24,69 +26,70 @@ The initial and frequently most challenging question to address is: how should t
 Using the domains discussed above we can see how we could view a monolith in segments relating to specific domains - in figure below
 
 <img
-    style="display: block; margin: 0 auto"
-    src="./images/moving-away-from-the-monolith/1-the-monolith.jpg"
-    alt="Abstract image of monolith"
-    width="550"
+  style="display: block; margin: 0 auto"
+  src="./images/moving-away-from-the-monolith/1-the-monolith.jpg"
+  alt="Abstract image of monolith"
+  width="550"
 />
 
 If we look at the simplified and typical monolith setup, you can see how clients fetch data and how tightly bound clients are, to the system. To move past this, we use Federation as the critical enabler.
 
 <img
-    src="./images/moving-away-from-the-monolith/2-typical-monolith-setup.jpg"
-    alt="Diagram of a simplified and typical monolith setup"
-    width="550"
+  src="./images/moving-away-from-the-monolith/2-typical-monolith-setup.jpg"
+  alt="Diagram of a simplified and typical monolith setup"
+  width="550"
 />
 
 The key technical aspect to manage here is bringing about productive change as fast as possible, wasting as little time and money during the digital transformation.
 The basic approach is to decouple the existing clients from the monolith and onto an established contract - which here - is afforded by the Federation layer. We are now actively removing risk of back end change from the client, thus allowing the org to go ahead with the transformation.
 
 <img
-    src="./images/moving-away-from-the-monolith/3-first-steps.jpg"
-    alt="Diagram of taking the first steps"
-    width="550"
+  src="./images/moving-away-from-the-monolith/3-first-steps.jpg"
+  alt="Diagram of taking the first steps"
+  width="550"
 />
 
 The API Gateway here will now allow us to fetch a (previously monolith) data response from the new Federation architecture, via configuring existing routes. Record lessons here and apply them going forward to the next subgraph.
-Note: some client work *may* be required here to bind use queries you have newly created or improved. Normally
+Note: some client work _may_ be required here to bind use queries you have newly created or improved. Normally
 
 <img
-    src="./images/moving-away-from-the-monolith/4-additional-subgraphs.jpg"
-    alt="Diagram of the critical secons subgraph"
-    width="550"
+  src="./images/moving-away-from-the-monolith/4-additional-subgraphs.jpg"
+  alt="Diagram of the critical secons subgraph"
+  width="550"
 />
 
 Upon proving and testing one subgraph and integrating into clients the pattern is now established to add further subgraphs, which transparently starts adding more functionality to our Federation stack.
 It is exceptionally important to note that this pattern keeps the monolith in play purely as a data source, because there must be a constant in play. Changing everything introduces change across and activating nearly every team, which will become impossible to manage. Creating a contract in this pattern de-risks the migration hugely because the org can be 100% certain they can serve the same data reliably, and not introduce further delay finding new data source.
-However, it is not important to connect to the monolith *if* you have the new API endpoints already available. If this is the case, you can bypass the monolith immediately as a datasource and connect where ever you like.
+However, it is not important to connect to the monolith _if_ you have the new API endpoints already available. If this is the case, you can bypass the monolith immediately as a datasource and connect where ever you like.
 
 <img
-    src="./images/moving-away-from-the-monolith/5-penultamate-state.jpg"
-    alt="Diagram of the penultimate state of system"
-    width="550"
+  src="./images/moving-away-from-the-monolith/5-penultamate-state.jpg"
+  alt="Diagram of the penultimate state of system"
+  width="550"
 />
 
 Using the strangulation pattern, we will arrive at a point where all traffic is now for each client is actually being facaded by the supergraph itself.
 
-We are now officially in a decoupled state, whereby the client has no idea where the data is coming from, *fundamentally* freeing the org to start the decommissioning phase of this pattern; shutting down the monolith section by section.
+We are now officially in a decoupled state, whereby the client has no idea where the data is coming from, _fundamentally_ freeing the org to start the decommissioning phase of this pattern; shutting down the monolith section by section.
 
 <img
-    style="display: block; margin: 0 auto"
-    src="./images/moving-away-from-the-monolith/6-shutting-down-monolith-sections.jpg"
-    alt="Diagram of the start of removing the monolith"
-    width="550"
+  style="display: block; margin: 0 auto"
+  src="./images/moving-away-from-the-monolith/6-shutting-down-monolith-sections.jpg"
+  alt="Diagram of the start of removing the monolith"
+  width="550"
 />
 
 The diagram above demonstrates two domains which were previously served by the monolith, now being served by the newly created microservices. It is critical to note, this pattern actively hides implementational details away from the client, yet fulfils the agreed data response, due to the fact there is now a contract involved in the shape of our new supergraph.
 
 <img
-    src="./images/moving-away-from-the-monolith/7-monolith-removed.jpg"
-    alt="Diagram of the monolith now removed"
-    width="550"
+  src="./images/moving-away-from-the-monolith/7-monolith-removed.jpg"
+  alt="Diagram of the monolith now removed"
+  width="550"
 />
 
 The end state of the transformation is achieved once all the domains in the monolith have been migrated, thus allowing the org to successfully rid themselves of the monolith.
 
 ## Conclusion
+
 Although moving away from deeply entrenched monolith can seem like an impossible task. Using very simple steps as described in this pattern and also compartmentalising away any un-required complexity - what seems an impossible task, can be achieved in a manageable fashion.
 Leverage the supergraph contract to decouple your systems and allow you to migrate away from the monolith, without impacting your clients.
