--- a/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
+++ b/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
@@ -4,13 +4,11 @@ id: TN0046
 tags: [federation]
 ---
 
-Customers that utilize GraphOS and Federation commonly use Graph Variants to manage environments and promotion through those environments.
+In this tech note, learn CI/CD best practices and examples for using graph variants for multiple deployment environments.
 
-In a typical architecture, organizations often set up multiple environments, such as development, pre-prod, and prod, each having a separate K8 cluster (or server) and a distinct database. They may also establish separate CI/CD jobs for each environment or configure CI/CD jobs to behave differently based on environment-specific variables.
+In a typical deployment architecture, organizations set up multiple environments&mdash;such as development, pre-prod, and prod&mdash;with each having a separate Kubernetes (k8s) cluster and database. They create separate CI/CD jobs for each environment or configure them to behave differently based on environment-specific variables. They use in GraphOS a dedicated graph variant for each environment, with each variant representing a specific copy of the graph for that environment.
 
-Similarly, each environment may have a dedicated Graph Variant, with each variant representing a specific copy of the graph that is specific to that environment.
-
-In this setup, your source control (e.g., Github) houses the code, your CI/CD system deploys the code to the target environment and publishes the schema, and the deployment environment retrieves its schema from GraphOS.
+The setup for a typical deployment architecture begins with code and schemas in source control. A CI/CD system both deploys code to a target deployment environment and publishes schemas to GraphOS, which then provides the schemas to a deployment environment:
 
 ```mermaid
 flowchart LR
@@ -31,15 +29,15 @@ The purpose of publishing your subgraph schemas to GraphOS is so that they can b
 
 </Tip>
 
-## Tying Branches to Variants and Environments
+## Source control branches for variants
 
-Depending on your needs, you can tie your branches to variants to represent environments using a couple of common patterns.
+The source control branching model you use affects the branch in which the code for a graph variant is developed. Let's go over examples for a few common branching models.
 
-### Git Flow (feature, develop, main)
+### Git flow (feature, develop, main)
 
-In Git Flow, you typically have a `develop` branch and a `main` branch where `develop` represents the newest code that hasn't necessarily been deployed to a production environment and `main` represents the production code.
+In Git Flow, you typically have a `develop` branch and a `main` branch, where `develop` contains the code under-development that hasn't necessarily been deployed to a production environment, and `main` contains the production code.
 
-In this setup, you would likely create two variants: `mygraph@develop` and `mygraph@main`, linking them directly to these Git branches.
+In this setup, you can create two variants, `mygraph@develop` and `mygraph@main`, that correspond directly to the `develop` and `main` branches.
 
 ```mermaid
 flowchart LR
@@ -47,9 +45,9 @@ flowchart LR
     main --publishes to --> mainvariant["mygraph@main"]
 ```
 
-The general flow here is that a `feature/*` branch contains the code for a particular feature.
+A `feature/*` branch contains the code for a particular feature.
 
-When a pull request is opened to merge `feature/*` into `develop`, a set of Schema Checks is executed to ensure this set of changes will not break the supergraph upon composing or publishing the changes.
+When a pull request is opened to merge `feature/*` into `develop`, a set of schema checks is executed to ensure this set of changes will not break the supergraph upon composing or publishing the changes.
 
 Once the code is merged from `feature/*` into `develop`, a CI/CD job runs to deploy the changes to the development environment and publish the subgraph to the `mygraph@develop` variant.
 
@@ -81,7 +79,7 @@ flowchart LR
     mainbranch -. publish .-> mainvariant
 ```
 
-In the deployment environments, your subgraphs and Router run with the Router configured to pull from a specific variant.
+In the deployment environments, your subgraphs and the Apollo Router run with the router configured to pull from a specific variant.
 
 ```mermaid
 flowchart TB
@@ -116,11 +114,11 @@ flowchart TB
 
 ```
 
-### Simplified Feature Branch Flow (feature, main)
+### Simplified feature branch flow (feature, main)
 
-This is very similar to Git Flow, with the exception that there is no "develop" branch representing the lower environment. Instead, new features are branched directly off the `main` branch, and when the code is completed, it is merged back into `main` directly. In this model, `main` represents the latest code but not necessarily what is deployed to production.
+A branching model similar to Git Flow uses `feature` and `main` branches but doesn't use `develop`. Instead, new features are branched directly off the `main` branch, and when the code is completed, each `feature` branch is merged directly into `main`. In this model, `main` represents the latest code but not necessarily what is deployed to production.
 
-In this setup, you would still have two variants: `mygraph@develop` and `mygraph@main`, but the timing of when they are published differs slightly from Git Flow.
+In this setup, you can still have two variants, `mygraph@develop` and `mygraph@main`, but the timing of when they are published differs slightly from Git Flow.
 
 ```mermaid
 flowchart LR
@@ -128,9 +126,9 @@ flowchart LR
     main --publishes to --> mainvariant["mygraph@main"]
 ```
 
-The general flow here is that a `feature/*` branch contains the code for a particular feature.
+A `feature/*` branch contains the code for a particular feature.
 
-When a pull request is opened to merge `feature/*` into `main`, a set of Schema Checks is executed to ensure this set of changes will not break the supergraph upon composing or publishing the changes.
+When a pull request is opened to merge `feature/*` into `main`, a set of schema checks is executed to ensure this set of changes will not break the supergraph upon composing or publishing the changes.
 
 Once the code is merged from `feature/*` into `main`, a CI/CD job runs to deploy the changes to the development environment and publish the subgraph to the `mygraph@develop` variant.
 
@@ -160,7 +158,7 @@ flowchart LR
     mainbranch -- publish --> mainvariant
 ```
 
-In the deployment environments, your subgraphs and Router run with the Router configured to pull from a specific variant.
+In the deployment environments, your subgraphs and the Apollo Router run with the router configured to pull from a specific variant.
 
 ```mermaid
 flowchart TB
@@ -195,9 +193,9 @@ flowchart TB
 
 ```
 
-### Multi-Branch Flow (feature, develop, preprod, main)
+### Multi-branch flow (feature, develop, preprod, main)
 
-In some cases, you may need multiple branches to accommodate multiple non-production environments. This can be achieved by expanding the Git Flow setup with additional variants tied to various branches.
+In some cases, you might need multiple branches to accommodate multiple non-production environments. This can be achieved by expanding the Git Flow setup with additional variants tied to various branches.
 
 In this setup, you would likely have a variant for each deployment environment (`mygraph@develop`, `mygraph@preprod`, `mygraph@main`), each linked directly to the appropriate Git branches.
 
@@ -208,13 +206,13 @@ flowchart LR
     main --publishes to --> mainvariant["mygraph@main"]
 ```
 
-The general flow here is that a `feature/*` branch contains the code for a particular feature.
+A `feature/*` branch contains the code for a particular feature.
 
-When a pull request is opened to merge `feature/*` into `develop`, a set of Schema Checks is executed to ensure these changes won't break the supergraph upon composing or publishing.
+When a pull request is opened to merge `feature/*` into `develop`, a set of schema checks is executed to ensure these changes won't break the supergraph upon composing or publishing.
 
 Once the code is merged from `feature/*` into `develop`, a CI/CD job runs to deploy the changes to the development environment and publish the subgraph to the `mygraph@develop` variant.
 
-When the code in the `develop` branch is ready for pre-production verification, such as User Acceptance Testing, the code is merged into `preprod`. Subsequently, a CI/CD job is run to deploy the changes to the pre-prod environment and publish the subgraph to the `mygraph@preprod` variant.
+When the code in the `develop` branch is ready for pre-production verification, such as user acceptance testing, the code is merged into `preprod`. Subsequently, a CI/CD job is run to deploy the changes to the pre-prod environment and publish the subgraph to the `mygraph@preprod` variant.
 
 Finally, when the code in the `preprod` branch is ready for production, it is merged into `main`, and a CI/CD job is run to deploy the changes to the production environment and publish the subgraph to the `mygraph@main` variant.
 
@@ -343,7 +341,7 @@ jobs:
 
       - name: Rover Subgraph Check
         run: |
-          rover subgraph check ${{ secrets.APOLLO_GRAPH_ID }}@develop \ # Specifying the variant here... this might also come from an environment variable, input, etc
+          rover subgraph check ${{ secrets.APOLLO_GRAPH_ID }}@develop \ # Specifying the variant here. This might also come from an environment variable, input, etc
             --name subgraph-a \
             --schema ./src/schema.graphql
 ```
@@ -356,7 +354,7 @@ For a more comprehensive example of deployment, Kubernetes setup, CI/CD, etc., c
 
 ## Publishing Schema
 
-To publish a schema from your CI/CD jobs to a GraphOS Variant, you can utilize the [`rover subgraph publish`](/rover/commands/subgraphs#publishing-a-subgraph-schema-to-graphos) command. Remember to specify the variant when running the `publish` command.
+To publish a schema from your CI/CD jobs to a GraphOS variant, you can use the [`rover subgraph publish`](/rover/commands/subgraphs#publishing-a-subgraph-schema-to-graphos) command.
 
 Here is an example using GitHub Actions:
 
@@ -387,7 +385,7 @@ jobs:
 
       - name: Rover Subgraph Publish
         run: |
-          rover subgraph publish ${{ secrets.APOLLO_GRAPH_ID }}@develop \ # Specifying the variant here... this might also come from an environment variable, input, etc
+          rover subgraph publish ${{ secrets.APOLLO_GRAPH_ID }}@develop \ # Specifying the variant here. This might also come from an environment variable, input, etc
             --name subgraph-a \
             --routing-url http://graphql.mygraph.svc.cluster.local:4000 \
             --schema ./src/schema.graphql
