--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -1,71 +1,140 @@
 ---
 title: Get started with Cloud Dedicated
 subtitle: Create your first Dedicated cloud router
-description: Learn about Apollo's dedicated cloud routing for GraphQL APIs
+description: Run a cloud router for your GraphQL APIs on dedicated infrastructure that Apollo provisions and manages.
 ---
 
 <DedicatedPreview />
 
-Prerequisites:
+Follow this hands-on guide to create a new graph that uses a Dedicated cloud router.
 
-- A GraphOS Studio account
-- An organization on the Dedicated plan
-- One or more existing GraphQL APIs
+<Tip>
 
-## 1. Create a new graph
+To learn about Dedicated cloud routing in general, go to the [Cloud Dedicated overview](./).
 
-To create a new Dedicated cloud router in the AWS region of your choice, you'll need to create a new graph in Studio. You can do this by choosing "Create New Graph" from the Graphs page.
+</Tip>
 
-## 2. Connect an API
+## Prerequisites
 
-If your subgraph URLs are publicly accessible, enter your API URL and name your subgraph.
+To complete this quickstart, you must have the following:
 
-If your subgraphs are not publicly accessible and require private networking, you can connect to them with (AWS VPC Lattice)[../lattice]. Select "My endpoint is not publicly accessible" to connect a VPC (see below).
+- A [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) account
+- An organization with the [Dedicated plan](https://www.apollographql.com/pricing/)
+  - <TrackableLink href="https://www.apollographql.com/contact-sales?referrer=docs" eventName="content_contact_sales">Get in touch</TrackableLink> to request access.
+- One or more GraphQL APIs that Apollo can access. That means you must either:
+  - Make your GraphQL API(s) available via a publicly accessible URL, for example, `https://api.mycompany.com/subgraphA`
+  - Keep your GraphQL API(s) private but allow secure connections, for example, via [VPC peering](https://docs.aws.amazon.com/vpc/latest/peering/what-is-vpc-peering.html/)
 
-<img
-  className="screenshot"
-  alt="Connect a VPC for Cloud Dedicated"
-  src="../../img/cloud-dedicated/quickstart.png"
-/>
+<Tip>
 
-## 3. Setup your graph
+In a supergraph, each GraphQL API is called a _subgraph_. Apollo refers to these GraphQL APIs as subgraphs, even if you only connect one GraphQL API.
 
-Dedicated cloud routers have a new UI for management and configuration. Head over to the Cloud Router page from the Studio navigation. From here, you can see a summary of your cloud router's settings. Use the "Configuration" tab to manage your Cloud Router's configuration. See the [Apollo Router](https://www.apollographql.com/docs/router/configuration/overview) docs for more information.
+</Tip>
 
-<img
-  className="screenshot"
-  alt="Dedicated Cloud Router Settings"
-  src="../../img/cloud-dedicated/cloudrouter.png"
-/>
+## Step 1. Create a new graph
 
-You'll also need to add each of your GraphQL APIs to your new Dedicated cloud router. Head over to the Subgraphs page from the Studio navigation.
+To provision a new Dedicated cloud router, you must first create a new graph in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content). To do so, click **Create New Graph** from the **Graphs** tab.
 
 <img
   className="screenshot"
-  alt="Dedicated cloud router add a subgraph"
-  src="../../img/cloud-dedicated/subgraph.png"
+  alt="Graphs tab in GraphOS Studio"
+  src="../../img/cloud-dedicated/create-new-graph.png"
 />
+
+## Step 2. Connect APIs
+
+1. Next, connect your GraphQL API to Apollo.
+  - If your API URL is publicly accessible, enter the API URL. This URL is the URL that client applications currently use to query your API.
+  - If your API isn't publicly accessible and requires private networking, you can connect to it with [AWS VPC Lattice](../lattice). Select **My endpoint isn't publicly accessible** to connect a VPC.
+
+  <img
+    className="screenshot"
+    alt="Cloud router configuration screen"
+    src="../../img/cloud-dedicated//my-endpoint-not-publicly-accessible.png"
+  />
+
+2. Enter a **Subgraph name**. The name should reflect your API's data or capabilities and uniquely identify your API among any other APIs you might add to the supergraph later.
+
+   <Note>
+
+   The subgraph name is immutable.
+
+   </Note>
+
+3. Select the backend **provider** and **region** to deploy your cloud router in.
+4. Optionally, configure headers, secrets, CORS rules, or other configurations. You can always [update your router configuration](#step-3-inspect-and-configure-your-cloud-router) as needed.
+5. Provide a **Supergraph name** and **ID**.
+   - The supergraph name is displayed throughout Studio and helps your team distinguish between your graphs. You can change your graph's name at any time.
+   - The ID is immutable and must be unique across all of Apollo. Ensure it starts with a letter and contains only letters, numbers, and dashes. You'll use the ID to reference your graph from various tools, such as the Rover CLI.
+
+6. Click **Create GraphOS Router**.
+
+Provisioning a router for your new supergraph may take a few moments. Once done, click **Query your supergraph** to open the Explorer and begin playing with your graph, or **Open README** to go to your graph's landing page.
+
+Before moving to the next step, add any other GraphQL APIs you want to connect. Open the **Subgraphs** page from the left navigation and click **Add a subgraph**.
+
+<img
+  className="screenshot"
+  alt="The 'Add a subgraph' button in the subgraphs page in GraphOS Studio"
+  src="../../img/cloud-dedicated/add-a-subgraph.png"
+/>
+
+Every router configuration or supergraph schema change—including adding a subgraph—triggers a new [launch](/graphos/delivery/launches/). Every launch automatically deploys new cloud router instances for your supergraph.
 
 <Note>
 
-Each change you make to your router configuration and each change to your supergraph schema (eg: adding a subgraph) will result in a new cloud router deployment. These are deployed safely to minimize API degredation and downtime. As a result, new GCUs are provisioned and swaped over to once they're online. This process typically takes 1-2 minutes per change but may take up to 5 minutes.
+The launch process typically takes 1-2 minutes but may take up to 5 minutes. During the process, Apollo provisions new GCUs and swaps them in once they're online. Deployments minimize API degradation and downtime. 
 
 </Note>
 
-## 4. Test and validate
+## Step 3. Inspect and configure your cloud router
 
-To test your graph is working as intended, head over to Explorer and run a sample query. You may want to enable subgraph error reporting if you run into issues.
+Dedicated cloud routers have a separate UI for management and configuration. Open the **Cloud Router** page from the left navigation. This page shows a summary of your cloud router, including its **API endpoint** and **API details**.
 
-Finally, we recommend running a load test to determine how much [throughput capacity](./throughput) you need to run your graph.
-
-You may want to add additional variants to your graph. You can do that by going to Settings, This Graph, and Variants:
+Use the **Configuration** tab to manage your cloud router's configuration. See the [Apollo Router docs](/router/configuration/overview) for more information.
 
 <img
   className="screenshot"
-  alt="Dedicated cloud router add a variant"
-  src="../../img/cloud-dedicated/variants.png"
+  alt="The Cloud Router page in GraphOS Studio"
+  src="../../img/cloud-dedicated/cloud-router-configuration.png"
 />
 
-## 5. Go live
+## Step 4. Test and validate
 
-When you're ready to go live, you'll need to migrate clients to your new `apollographos.net` endpoint by either passing this to your clients directly or by configuring a reverse proxy. Support for custom domains will arive in 2024.
+To test whether your graph works as intended, run a sample query by clicking **Run in Explorer** from your graph's README.
+
+<img
+  className="screenshot"
+  alt="The 'Run in Explorer' button in GraphOS Studio"
+  src="../../img/cloud-dedicated/run-in-explorer.png"
+/>
+
+[Enable subgraph error reporting](./lattice-troubleshooting/#enable-subgraph-error-inclusion) if you run into issues.
+
+For further testing, you can add variants to your graph for different environments. To do so, go to **Settings** > **This Graph** > **Variants** and click **Add a variant**.
+
+<img
+  className="screenshot"
+  alt="The 'Add a variant' button in GraphOS Studio"
+  src="../../img/cloud-dedicated/add-a-variant.png"
+/>
+
+Finally, Apollo recommends running a load test to determine how much [throughput capacity](./throughput) you need to run your graph.
+
+## Step 5. Go live
+
+When you're ready to go live, migrate clients to your router's endpoint. You can find your endpoint URL on the **Cloud router** page in GraphOS Studio.
+
+<img
+  className="screenshot"
+  alt="A cloud router's endpoint displayed on the Cloud Router page in GraphOS Studio"
+  src="../../img/cloud-dedicated/router-endpoint.png"
+/>
+
+Either pass the endpoint directly to your clients or configure a reverse proxy.
+
+<Note>
+
+Support for endpoints with custom domains will become available in 2024.
+
+</Note>
